# gelataio-boy

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  tracker_publisher.py
coordinator/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
coordinator/launch/: fake_luigi.launch  start.launch  start.launch.orig  start_real.launch  start_real_test.launch  start_sim.launch  start_sim_test.launch
coordinator/scripts/: fake_luigi_client.py  luigi_scoop_server.py
dummy_publishers/: CMakeLists.txt  package.xml
dummy_publishers/scripts/: order_client.py  vision_publisher.py
gelataio-messages/: CMakeLists.txt  package.xml
gelataio_boy_control/: CMakeLists.txt  package.xml
gelataio_boy_control/launch/: joint_info_collector.launch  sim_joint_state_converter.launch
gelataio_boy_control/scripts/: approach_via.sh  elbow_zero.sh  example_call.sh  really_zero.sh  scooping_point.sh  set_icecream_pos.sh  start_kindyn.sh  start_sim_kindyn.sh  test_real_scooping.sh  test_scooping.sh  test_stuff.sh  test_tilted.sh  wrist_descoop.sh  wrist_scoop.sh  zero_joints.sh
gelataio_boy_control/src/: JointInfoCollector.cpp  emotions_interface.cpp  hand_controller.cpp  hand_interface.cpp  joint_info_collector.cpp  main.cpp  plan_executor.cpp  scooping.cpp  scooping_ros.cpp  sim_joint_state_converter.cpp
gelataio_messages/: CMakeLists.txt  package.xml
gelataio_messages/srv/: PerformScoop.srv
gelatio-boy-control/: CMakeLists.txt  package.xml
gelatio_boy_control/: CMakeLists.txt  package.xml
gelatio_boy_control/launch/: scooping_planning.launch
gelatio_boy_control/scripts/: calibration.csv  calibration.py  goal_pose_srv.py  tracker_publisher.py
gelatio_boy_control/src/: hand_controller.cpp  plan_executor.cpp  scooping.cpp  scooping_planning.cpp  scooping_ros.cpp
gelatio_gazebo/: CMakeLists.txt  package.xml  robot.launch
gelatio_gazebo/scripts/: publish_cup.py
gelatio_gazebo/world/: world.world
gelatio_gazebo/world/models/icecream_cup/: model.config  model.sdf
gelatio_gazebo/world/models/platform/: model.config  model.sdf
icecream-roboy-moveit-config/: .setup_assistant  CMakeLists.txt  package.xml
icecream-roboy-moveit-config/config/: kinematics.yaml  ompl_planning.yaml  roboy_icecream.srdf  ros_controllers.yaml
icecream-roboy-moveit-config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  roboy_icecream_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_config_icecream_roboy/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_icecream_roboy/config/: fake_controllers.yaml  joint_limits.yaml  roboy_icecream.srdf
moveit_config_icecream_roboy/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  roboy_icecream_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_icecream_roboy/: .setup_assistant  CMakeLists.txt
moveit_icecream_roboy/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  roboy_icecream.srdf  ros_controllers.yaml
moveit_icecream_roboy/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_roboy_icecream/: .setup_assistant  CMakeLists.txt  package.xml
moveit_roboy_icecream/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  roboy_icecream.srdf  ros_controllers.yaml
moveit_roboy_icecream/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  roboy_icecream_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
scooping_cv/: CMakeLists.txt  README.md  package.xml
scooping_cv/config/: camera.yaml  object.yaml  object_tracker_services.yaml  particle_tracker.yaml  zedm.yaml
scooping_cv/launch/: ar_tracking.rviz  camera.launch  camera_rviz.launch  dbot_realsense.rviz  ice_cream_trays.launch  ice_cream_trays_rviz.launch  multi_object_tracker_service.launch  object_tracker_service.launch  object_tracking_client.launch  rs_ar_track_alvar.launch  rviz_demo.launch  rviz_tracking.launch  zed_camera.launch  zed_camera_rviz.launch
scooping_cv/meshes/: ice_cream_tray_chocolate.dae  ice_cream_tray_strawberry.dae  ice_cream_tray_vanilla.dae
scooping_cv/models/: ice_cream_trays.gazebo  ice_cream_trays.xacro  zed_camera_gazebo.gazebo  zed_camera_gazebo.xacro
scooping_cv/msg/: MultiObjectState.msg
scooping_cv/scripts/: goal_pose_srv_server.py
scooping_cv/src/: PointDetector.py  cnt_points_curve.npy  color_filter.py  getCamImg.py  ice_cream_service.py  pixel2pc.py  xyzrgb.npy  zed_test.py
scooping_cv/srv/: GoalPose.srv  RunMultiObjectTracker.srv
scooping_cv/worlds/: objects.world
vive_control/: CMakeLists.txt  package.xml  readme.md
vive_control/config/: readme.md  vive_control.yaml
vive_control/launch/: assume_direct_control.launch
vive_control/scripts/: install_dependencies.sh  vive_to_ik_control.py
vive_tracking/: CMakeLists.txt  package.xml  readme.md
(+27 files in other folders)
