<?xml version="1.0"?>
<package format="2">
  <name>dummy_publishgers</name>
  <version>0.0.0</version>
  <description>Dummy publishers for testing the interaction with gelatio boy. </description>
  <maintainer email="stanislav.lukyanenko@tum.de">Stanislav Lukyanenko</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roboy_cognition_msgs</build_depend>
  <build_depend>rospy</build_depend>


  <build_export_depend>geometryroboy_cognition_msgs_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>


  <exec_depend>roboy_cognition_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>



</package>
