<package format="2">

  <name>gelataio_messages</name>
  <version>0.0.0</version>
  <description>
     Internal messages for the ice cream scooping
  </description>
  <author email="arne.sachtler@tum.de">arne.sachtler</author>
  <maintainer email="arne.sachtler@tum.de">arne.sachtler</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

</package>
