<package>

  <name>gelataio_msgs</name>
  <version>0.0.0</version>
  <description>
     Internal messages for the ice cream scooping
  </description>
  <author email="arne.sachtler@tum.de">arne.sachtler</author>
  <maintainer email="arne.sachtler@tum.de">arne.sachtler</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
